H264 AVC works natively on my Panasonic Viera TV.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
- * Issues with some videos exist with the stock Ubuntu Natty version of ffmpeg.
-    These are unrelated to pydlnadms, and were not observed with 0.7.4 of ffmpeg.
+ * Some versions of ffmpeg have issues when exec'd into from Python. I suspect this is because SIGPIPE is set to SIG_IGN. I currently work around it.
+ * ffmpeg has issues putting mpeg4 into mpegts streams. Only h264 AVC is left untouched in the provided transcode script.
